--- a/RPG/src/App.css
+++ b/RPG/src/App.css
@@ -1,6 +1,6 @@
-/* tentando ajeitar a posição do mapa */
-
-body, html, #root {
+body,
+html,
+#root {
   margin: 0;
   padding: 0;
   height: 100%;
